force-app/main/default/objects/agrid__Conditional_Formatting_Rule__c/agrid__Conditional_Formatting_Rule__c.object-meta.xml
<CustomObject>
    <label>Conditional Formatting Rule</label>
    <nameField>
        <displayFormat>GCFR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditional Formatting Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>