force-app/main/default/objects/agrid__Conditional_Formatting_Rule__c/fields/agrid__Action__c.field-meta.xml
<CustomField>
    <fullName>agrid__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>agrid__Action__c</referenceTo>
    <relationshipLabel>Conditional Formatting Rules</relationshipLabel>
    <relationshipName>Conditional_Formatting_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>