force-app/main/default/objects/agrid__Conditional_Formatting_Rule__c/fields/agrid__Configuration__c.field-meta.xml
<CustomField>
    <fullName>agrid__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>agrid__Configuration__c</referenceTo>
    <relationshipLabel>Conditional Formatting Rules</relationshipLabel>
    <relationshipName>Conditional_Formatting_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>