force-app/main/default/objects/agrid__Conditional_Formatting_Rule__c/fields/agrid__Name__c.field-meta.xml
<CustomField>
    <fullName>agrid__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>