force-app/main/default/objects/agrid__Conditional_Formatting_Rule__c/fields/agrid__Type__c.field-meta.xml
<CustomField>
    <fullName>agrid__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>